--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Temas Selectos de TI</h1>
-    <h2>Hola Mundo</h2>
+    <h1>Sitio Principal</h1>
+    <h3>Materia: Temas Selectos de TI</h3>
+    <h3>Eduardo Gallegos Domínguez</h3>
+
+    <p>Este es mi sitio de evidencia para la materia de Temas Selectos de Ti.</p>
+
+    <hr>
+
+    <b>Índice de Ejercicios</b>
+
+    <br>
+
+    <a href="Ejercicio1.html">Ejercicio 1</a>
+    
 </body>
 </html>
